# PriceTracker

./: .gitignore  README.md
Backend/: Pipfile  Procfile  pyproject.toml  requirements.txt
Backend/backend/: db.sqlite3
Backend/backend/authentication/: api.py  urls.py
Backend/backend/backend/: settings.py  urls.py
Backend/backend/price_tracker/: admin.py  api.py  apps.py  models.py  scrapers.py  serializer.py  urls.py
Backend/backend/price_tracker/migrations/: 0001_initial.py  0002_initial.py  0003_rename_trackers_tracker_alter_product_url.py
Backend/backend/users/: api.py  models.py  serializers.py  urls.py
Backend/backend/users/migrations/: 0001_initial.py  0002_alter_user_discord_id_alter_user_name_and_more.py
WebScraping/: generic.py  mdcomputers.py  wooCommerce.py
Website/mantine-vite/: package.json
Website/mantine-vite/src/: App.tsx
Website/mantine-vite/src/UI/components/: header.tsx  navbar.tsx  userButton.tsx
Website/mantine-vite/src/UI/home_screen/: index.tsx
Website/mantine-vite/src/config/: config.ts
Websites-temporary/: home.html
