[tool.poetry]
name = "PriceTrackerBackend"
version = "0.1.0"
description = ""
authors = ["sananm <mohammedsanan18@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "*"
django = "*"
django-rest-durin = "*"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
